--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -116,7 +116,7 @@
 
 									<div style="height:400px;width:400px;text-align:center">
 										<iframe style="border:0px;" width="400px" height="400px"
-											data-src="sketches/zeros-ones/" scrolling="no"></iframe>
+											src="sketches/zeros-ones/" scrolling="no"></iframe>
 									</div>
 
 								</td>
@@ -347,7 +347,7 @@
 										<p>
 											$
 											\ds
-											f(x,y)=\begin{pmatrix}
+											T(x,y)=\begin{pmatrix}
 											a & b\\
 											c & d
 											\end{pmatrix}
@@ -378,20 +378,60 @@
 						</tr>
 					</table>
 
-					<div style="font-size:35px;margin-top:-20px"  class="fragment" data-fragment-index="0">
+					<div style="font-size:35px;margin-top:-20px" class="fragment" data-fragment-index="0">
 						<p>
 							<strong>Fractals</strong>
 						</p>
 					</div>
-					<div style="margin-top: -30px;"  class="fragment" data-fragment-index="0">
+					<div style="margin-top: -30px;" class="fragment" data-fragment-index="0">
 						<picture>
 							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.webp"
 								type="image/webp">
-							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.gif" alt="🤯" 
-							width="64"
-							height="64">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.gif" alt="🤯" width="64"
+								height="64">
 						</picture>
 					</div>
+				</section>
+
+				<section>
+					<h3>
+						Format of the course
+					</h3>
+
+					<div class="left-txt size-85">
+						<ul style="line-height: 60px;">
+							<li class="fragment" data-fragment-index="0">Flipped-classroom:
+
+								<ul>
+									<li class="fragment" data-fragment-index="1">Content is available on the Canvas course website.</li>
+									<li class="fragment" data-fragment-index="2">You are expected to study the content before the weekly on-campus workshop.</li>
+								</ul>
+							</li>
+
+							<li class="fragment" data-fragment-index="3">
+								Weekly on-campus workshop:
+								<ul>
+									<li class="fragment" data-fragment-index="4">Practice with workshop problems.
+
+										<div style="text-align: center;">
+											<picture>
+												<source
+													srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/270f_fe0f/512.webp"
+													type="image/webp">
+												<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/270f_fe0f/512.gif"
+													alt="✏" width="64" height="64">
+											</picture>
+											<picture style="font-size: 100px;">
+												🗒️ Q&A
+											</picture>
+										</div>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+
+					<br />
 				</section>
 
 
