--- a/slides/2201nsc/week-02.html
+++ b/slides/2201nsc/week-02.html
@@ -39,16 +39,23 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
 	<div class="reveal">
 		<div class="slides">
 
-			<!-- Any section element inside of this container is displayed as a slide -->
-
-
-
+			
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<section>
 
@@ -57,484 +64,22 @@
 						style="width: 150px; vertical-align: middle; border: 0px solid rgb(255, 255, 255);">
 				</div>
 
-				<div class="size-95">
-					<h2>Foundation Mathematics</h2>
-					<p style="font-weight: bold; font-size: 120%;">1017SCG</p>
+				<div>
+					<span class="size-85">
+						<h2>Linear Algebra & Applications</h2>
+					</span>
+					<span class="size-95">
+						<p style="font-weight: bold; font-size: 120%;">2201NSC</p>
+					</span>
+
 				</div>
 
 				<br />
-				<p style="margin-top: 50px;">Week 2
-				</p>
+				<p style="margin-top: 50px;">Week 1</p>
 				<br /><br />
 			</section>
 
-			<section>
-				<h3>
-					Topics from Week 1
-				</h3>
 
-				<br />
-
-				<div class="left-txt size-85">
-					<ul style="line-height: 60px;">
-						<li>
-							Order of Operations.
-						</li>
-						<li>
-							Index Laws.
-						</li>
-						<li>
-							Scientific Notation.
-						</li>
-					</ul>
-
-				</div>
-
-
-				<br />
-				<br />
-			</section>
-
-			<section>
-				<h3>
-					Topics for Week 2
-				</h3>
-
-
-				<div class="left-txt size-75">
-					<ul style="line-height: 55px;">
-						<li class="fragment" data-fragment-index="0">
-							Logarithms
-
-							<ul>
-								<li class="fragment" data-fragment-index="2">
-									Introduction to logarithms
-								</li>
-								<li class="fragment" data-fragment-index="3">
-									Evaluating basic logarithms without a calculator
-								</li>
-								<li class="fragment" data-fragment-index="4">
-									Logarithm laws (commonly known as log laws)
-								</li>
-								<li class="fragment" data-fragment-index="5">
-									Change of base rule
-								</li>
-
-							</ul>
-						</li>
-						<li class="fragment" data-fragment-index="6">
-							Triangles
-							<ul>
-								<li class="fragment" data-fragment-index="7">
-									Pythagoras' theorem
-								</li>
-								<li class="fragment" data-fragment-index="8">
-									$\sin$/$\cos$/$\tan$ ratios
-								</li>
-								<li class="fragment" data-fragment-index="9">
-									Sine and Cosine rules
-								</li>
-							</ul>
-						</li>
-
-				</div>
-
-
-				<br />
-			</section>
-
-			<section>
-				<section data-auto-animate="">
-					<h3>Introduction to Logarithms</h3>
-
-					<div class="left-txt size-75">
-						<p class="fragment" data-fragment-index="0">
-							A logarithm is the inverse of an exponent.
-							<span class="fragment" data-fragment-index="1">
-								It tells us what power we need to raise a base to in order to get a certain number.
-							</span>
-
-
-						</p>
-					</div>
-
-					<div style="text-align: center;" class="fragment" data-fragment-index="2">
-						<picture>
-							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.webp"
-								type="image/webp">
-							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.gif" alt="🤔" width="250"
-								height="250">
-						</picture>
-					</div>
-
-					<br />
-
-
-				</section>
-				<section data-auto-animate="">
-					<h3>Introduction to Logarithms</h3>
-
-					<div class="left-txt size-75">
-						<p>
-							A logarithm is the inverse of an exponent.
-							<span>
-								It tells us what power we need to raise a base to in order to get a certain number.
-							</span>
-
-
-						</p>
-					</div>
-
-					<div>
-						<iframe
-							style="width: 100%; height: 430px; border: 5px solid rgb(166, 166, 166); margin-top: -10px; border-radius: 20px;"
-							src="../revealjs-animations/log-animation/index.html"></iframe>
-
-					</div>
-				</section>
-				<section>
-					<h3>Introduction to Logarithms</h3>
-
-
-					<div style="font-size: 120%;">
-						<p class="fragment" data-fragment-index="0">
-							If
-							\(
-							\;a^x = N,\;
-							\)
-							<span class="fragment" data-fragment-index="1">
-								then
-								\(
-								\;\log_a N = x\;
-								\)
-							</span>
-						</p>
-
-						<p class="fragment" data-fragment-index="2">
-							where $\;N\gt 0,\;$
-							<span class="fragment" data-fragment-index="3">
-								$a\gt 0,\;$
-							</span>
-							<span class="fragment" data-fragment-index="4">
-								$a\neq 1.$
-							</span>
-						</p>
-
-
-					</div>
-
-					<div class="left-txt">
-						<ul style="line-height: 100px;">
-							<li class="fragment" data-fragment-index="5">\( \log_2 8 = 3\; \)
-								<span class="fragment" data-fragment-index="6">because \( \;2^3 = 8 \)</span>
-							</li>
-							<li class="fragment" data-fragment-index="7">\( \log_{10} 1000 = 3 \;\)
-								<span class="fragment" data-fragment-index="8">because \( \;10^3 = 1000 \)</span>
-							</li>
-						</ul>
-
-
-					</div>
-					<br />
-					<br />
-				</section>
-
-				<section>
-					<h3>Evaluating Logarithms Without a Calculator</h3>
-
-					<div class="left-txt size-85">
-						<p>Simplify the following by thinking in terms of powers:</p>
-					</div>
-
-					<div class="left-txt">
-
-
-						<ul style="line-height: 80px;">
-							<li>\( \log_2 16 \)
-								<span class="fragment" data-fragment-index="1">
-									\(=4\;\)
-								</span>
-								<span class="fragment" data-fragment-index="2">
-									because \(\; 2^4 = 16 \)
-								</span>
-							</li>
-							<li class="fragment" data-fragment-index="3">\( \log_3 81 \) </li>
-							<li class="fragment" data-fragment-index="4">\( \log_5 25 \) </li>
-							<li class="fragment" data-fragment-index="5">\( \log_{10} 1 \)</li>
-						</ul>
-
-						<!--
-						<ul style="line-height: 80px;">
-							<li class="fragment" data-fragment-index="0">\( \log_2 16 = 4 \) because \( 2^4 = 16 \)</li>
-							<li>\( \log_3 81 = 4 \) because \( 3^4 = 81 \)</li>
-							<li>\( \log_5 25 = 2 \) because \( 5^2 = 25 \)</li>
-							<li>\( \log_{10} 1 = 0 \) because \( 10^0 = 1 \)</li>
-						</ul>
-						-->
-					</div>
-
-					<br />
-					<br />
-				</section>
-
-				<section>
-					<h3>Logarithm Laws</h3>
-
-					<div class="left-txt size-90">
-						<ul>
-							<li class="fragment" data-fragment-index="0">
-								<strong>Product Law:</strong>
-								<div style="padding: 20px;">
-									<span class="fragment" data-fragment-index="1">$\log_a\left(M\times N\right)$</span>
-									<span class="fragment" data-fragment-index="2">$=\log_a M + \log_a N$</span>
-								</div>
-							</li>
-							<li class="fragment" data-fragment-index="3">
-								<strong>Quotient Law:</strong>
-								<div style="padding: 20px;">
-									<span class="fragment"
-										data-fragment-index="4">$\log_a\left(\dfrac{M}{N}\right)$</span>
-									<span class="fragment" data-fragment-index="5">$=\log_a M - \log_a N$</span>
-								</div>
-
-							</li>
-							<li class="fragment" data-fragment-index="6">
-								<strong>Power Law:</strong>
-								<div style="padding: 20px;">
-									<span class="fragment" data-fragment-index="7">$\log_a\left(N^p\right)$</span>
-									<span class="fragment" data-fragment-index="8">$= p \times \log_a (N)$</span>
-								</div>
-
-							</li>
-						</ul>
-						<p class="fragment" data-fragment-index="9">
-							These rules work for any base \( a > 0 ,\) \( a \ne 1 .\)
-						</p>
-					</div>
-					<br />
-				</section>
-				<section>
-					<h3>Logarithm Laws</h3>
-
-					<div class="left-txt size-90">
-						<ul>
-							<li>
-								<strong>Product Law:</strong>
-								<div style="padding: 20px;">
-									<span>$\log_a\left(M\times N\right)$</span>
-									<span>$=\log_a M + \log_a N$</span>
-								</div>
-							</li>
-							<li>
-								<strong>Quotient Law:</strong>
-								<div style="padding: 20px;">
-									<span>$\log_a\left(\dfrac{M}{N}\right)$</span>
-									<span>$=\log_a M - \log_a N$</span>
-								</div>
-
-							</li>
-							<li>
-								<strong>Power Law:</strong>
-								<div style="padding: 20px;">
-									<span>$\log_a\left(N^p\right)$</span>
-									<span>$= p \times \log_a (N)$</span>
-								</div>
-
-							</li>
-						</ul>
-
-					</div>
-
-					<div class="size-90">
-						<p>• Also 👉 $ \;\log_a(a) = 1\;$
-							<span class="fragment" data-fragment-index="3"> and $\;\log_a(1) = 0 \qquad \qquad$</span>
-						</p>
-					</div>
-					<br />
-				</section>
-
-				<section>
-					<h3>Using Log Laws - Examples</h3>
-
-					<div class="left-txt">
-						<ul style="line-height: 120px;">
-							<li>\( \log_2\left(8 \cdot 4\right) \)</li>
-							<li>\( \log_3\left(\dfrac{81}{3}\right) \)</li>
-							<li>\( \log_5\left(25^3\right) \)</li>
-						</ul>
-
-						<!--
-						<ul style="line-height: 120px;">
-							<li>\( \log_2\left(8 \cdot 4\right) = \log_2 8 + \log_2 4 = 3 + 2 = 5 \)</li>
-							<li>\( \log_3\left(\dfrac{81}{3}\right) = \log_3 81 - \log_3 3 = 4 - 1 = 3 \)</li>
-							<li>\( \log_5\left(25^3\right) = 3 \log_5 25 = 3 \times 2 = 6 \)</li>
-						</ul>
-						-->
-					</div>
-
-					<br />
-				</section>
-
-				<section>
-					<h3>Change of Base Rule</h3>
-
-					<div class="left-txt size-85">
-						<p class="fragment" data-fragment-index="0">
-							If your calculator only has log base 10 or
-							natural log (ln),
-							<span class="fragment" data-fragment-index="1">
-								you can use the change of base
-								formula:
-							</span>
-						</p>
-
-						<p class="fragment" data-fragment-index="1">
-							\[
-							\large \log_b (N) = \frac{\log_a (N)}{\log_a (b)}
-							\]
-
-							<span class="fragment" data-fragment-index="3">
-								where \( a \) can be 10 (common log) or \( e \) (natural log).
-							</span>
-						</p>
-
-
-					</div>
-
-					<div class="">
-						<p class="fragment" data-fragment-index="4">
-							<strong>Example:</strong>
-							<span class="fragment" data-fragment-index="5">$\log_2 10$</span>
-							<span class="fragment" data-fragment-index="6">$ =\dfrac{\log_{10} 10}{\log_{10} 2} $</span>
-							<span class="fragment" data-fragment-index="7">$ = \dfrac{1}{0.3010}$</span>
-							<span class="fragment" data-fragment-index="8">$\approx 3.32$</span>
-						</p>
-					</div>
-					<br />
-				</section>
-
-				<section>
-					<h3>Practice Questions</h3>
-
-					<div class="left-txt size-95">
-						<ol style="line-height: 90px;">
-							<li>Evaluate: \( \log_4 64 \)</li>
-							<li>Simplify using laws: \( \log_2 8 + \log_2 4 \)</li>
-							<li>Simplify: \( \log_3 81 - \log_3 3 \)</li>
-							<li>Use change of base: \( \log_7 50 \) (use base 10)</li>
-						</ol>
-					</div>
-					<br />
-					<br />
-				</section>
-
-			</section>
-
-			<section>
-
-				<section>
-					<h3>Pythagoras' Theorem</h3>
-
-					<div class="left-txt size-85">
-						<p>
-							The Pythagoras Theorem applies to <strong>right-angled triangles</strong>. It states that:
-						</p>
-
-						<p>
-							\[
-							a^2 + b^2 = c^2
-							\]
-							where:
-						</p>
-						<ul>
-							<li>\( a \) and \( b \) are the lengths of the two shorter sides (legs)</li>
-							<li>\( c \) is the length of the hypotenuse (the side opposite the right angle)</li>
-						</ul>
-
-						<p>This theorem allows us to calculate the length of any side if the other two are known.</p>
-					</div>
-				</section>
-
-				
-
-				<section>
-					<h3>Visualising the Theorem</h3>
-
-					<div class="left-txt size-85">
-						<p>
-							In a right-angled triangle:
-						</p>
-						<ul>
-							<li>The square on the hypotenuse has the same area as the sum of the squares on the other
-								two sides.</li>
-						</ul>
-
-						<p>
-							<img src="images/pythagoras-visual.png"
-								style="width: 60%; border: 2px solid #ccc; border-radius: 10px;" />
-						</p>
-					</div>
-				</section>
-
-				<section>
-					<h3>Example: Find the Hypotenuse</h3>
-
-					<div class="left-txt size-85">
-						<p>A triangle has legs of length \( a = 6 \) and \( b = 8 \). What is the length of the
-							hypotenuse \( c \)?</p>
-
-						<p>Using the Pythagoras Theorem:</p>
-						<p>
-							\[
-							c^2 = 6^2 + 8^2 = 36 + 64 = 100
-							\]
-							\[
-							c = \sqrt{100} = 10
-							\]
-						</p>
-
-						<p>✅ So, the hypotenuse is 10 units.</p>
-					</div>
-				</section>
-
-
-				<section>
-					<h3>Example: Find a Missing Side</h3>
-
-					<div class="left-txt size-85">
-						<p>A right-angled triangle has a hypotenuse of length \( c = 13 \) and one leg of length \( a =
-							5 \). Find the other leg \( b \).</p>
-
-						<p>
-							\[
-							b^2 = c^2 - a^2 = 13^2 - 5^2 = 169 - 25 = 144
-							\]
-							\[
-							b = \sqrt{144} = 12
-							\]
-						</p>
-
-						<p>✅ The missing side is 12 units.</p>
-					</div>
-				</section>
-
-				<section>
-					<h3>Try It Yourself</h3>
-
-					<div class="left-txt size-85">
-						<ol>
-							<li>Find the hypotenuse of a triangle with legs 9 and 12.</li>
-							<li>A right triangle has a hypotenuse of 15 and one leg of 9. Find the other leg.</li>
-							<li>If \( a = 7 \), \( c = 25 \), find \( b \).</li>
-						</ol>
-					</div>
-				</section>
-
-
-
-
-
-			</section>
 
 			<section>
 
