--- a/slides/2201nsc/monkey.html
+++ b/slides/2201nsc/monkey.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Coming soon!</title>
+	<title>Monkey</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 
 </head>
 
@@ -49,22 +59,18 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 
 
-			<section  data-background-color="rgb(20,20,20)">
+			<section data-background-color="rgb(20,20,20)">
 
-				<p style="font-size:20px">Coming soon! In the mean time, see how this monkey types 1 million digits of \(\pi.\)</p>
-				
-				<iframe style="border: 0px"
-				scrolling="no"
-				width="100%" 
-				height="560px" 
-				data-src="https://www.dynamicmath.xyz/sketches/monkey-pi-digits/"
-				allowfullscreen=""
-				></iframe>
-	
-				<br/><br/><br/>
+				<p style="font-size:20px">Coming soon! In the mean time, see how this monkey types 1 million digits of
+					\(\pi.\)</p>
+
+				<iframe style="border: 0px" scrolling="no" width="100%" height="560px"
+					data-src="https://www.dynamicmath.xyz/sketches/monkey-pi-digits/" allowfullscreen=""></iframe>
+
+				<br /><br /><br />
 			</section>
 
-			
+
 
 			<!-- Ends sections -->
 
