--- a/slides/2201nsc/music.html
+++ b/slides/2201nsc/music.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Coming soon!</title>
+	<title>Music</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -48,22 +58,17 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 
 
-			<section  data-background-color="rgb(20,20,20)">
+			<section data-background-color="rgb(20,20,20)">
 
 				<p style="font-size:20px">Coming soon! In the mean time, enjoy this animation by Steven Wittens.</p>
-				
-				<iframe style="border: 0px"
-				scrolling="no"
-				width="100%" 
-				height="550px" 
-				src="https://acko.net/files/dark-sunrise/git/"
-				allowfullscreen=""
-				></iframe>
-	
-				<br/><br/><br/>
+
+				<iframe style="border: 0px" scrolling="no" width="100%" height="550px"
+					src="https://acko.net/files/dark-sunrise/git/" allowfullscreen=""></iframe>
+
+				<br /><br /><br />
 			</section>
 
-			
+
 
 			<!-- Ends sections -->
 
