--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -39,15 +39,21 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
 	<div class="reveal">
 		<div class="slides">
-
-			<!-- Any section element inside of this container is displayed as a slide -->
-
-
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<section>
@@ -68,8 +74,7 @@
 				</div>
 
 				<br />
-				<p style="margin-top: 50px;">Week 1
-				</p>
+				<p style="margin-top: 50px;">Week 1</p>
 				<br /><br />
 			</section>
 
@@ -403,8 +408,10 @@
 							<li class="fragment" data-fragment-index="0">Flipped-classroom:
 
 								<ul>
-									<li class="fragment" data-fragment-index="1">Content is available on the Canvas course website.</li>
-									<li class="fragment" data-fragment-index="2">You are expected to study the content before the weekly on-campus workshop.</li>
+									<li class="fragment" data-fragment-index="1">Content is available on the Canvas
+										course website.</li>
+									<li class="fragment" data-fragment-index="2">You are expected to study the content
+										before the weekly on-campus workshop.</li>
 								</ul>
 							</li>
 
