--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -225,15 +225,15 @@
 
 									<p>
 										$$
-										{\begin{bmatrix}\cos \gamma &amp;-\sin \gamma &amp;0\\\sin \gamma &amp;\cos
-										\gamma &amp;0\\0&amp;0&amp;1\\\end{bmatrix}}\qquad {\begin{bmatrix}\cos \beta
+										{\begin{pmatrix}\cos \gamma &amp;-\sin \gamma &amp;0\\\sin \gamma &amp;\cos
+										\gamma &amp;0\\0&amp;0&amp;1\\\end{pmatrix}}\qquad {\begin{pmatrix}\cos \beta
 										&amp;0&amp;\sin \beta \\0&amp;1&amp;0\\-\sin \beta &amp;0&amp;\cos \beta
-										\\\end{bmatrix}}
+										\\\end{pmatrix}}
 										$$
 									</p>
 									<p>
-										$${\begin{bmatrix}1&amp;0&amp;0\\0&amp;\cos \alpha &amp;-\sin \alpha
-										\\0&amp;\sin \alpha &amp;\cos \alpha \\\end{bmatrix}}$$
+										$${\begin{pmatrix}1&amp;0&amp;0\\0&amp;\cos \alpha &amp;-\sin \alpha
+										\\0&amp;\sin \alpha &amp;\cos \alpha \\\end{pmatrix}}$$
 									</p>
 
 								</td>
@@ -320,6 +320,9 @@
 
 				<section>
 					<h4>Applications: Singular Value Decomposition (SVD)</h4>
+					<p style="font-size: 70%;margin-top: -10px;">
+						<strong>Image Compression</strong>
+					</p>
 
 					<video loop style="width:500px" data-autoplay data-src="images/week-01/compressing-cat.mov"></video>
 
@@ -341,8 +344,11 @@
 				-->
 
 				<section>
-					<h5>Applications: Affine transformations</h5>
+					<h4>Applications: Affine transformations</h4>
 
+					<p style="font-size: 70%;margin-top: -10px;"  class="fragment" data-fragment-index="0">
+						<strong>Fractals</strong>
+					</p>
 
 					<table id="eqarray" style="width:100%;">
 						<tr>
@@ -383,17 +389,13 @@
 						</tr>
 					</table>
 
-					<div style="font-size:35px;margin-top:-20px" class="fragment" data-fragment-index="0">
-						<p>
-							<strong>Fractals</strong>
-						</p>
-					</div>
+					
 					<div style="margin-top: -30px;" class="fragment" data-fragment-index="0">
 						<picture>
 							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.webp"
 								type="image/webp">
-							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.gif" alt="🤯" width="64"
-								height="64">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.gif" alt="🤯" 
+							    width="80" height="80">
 						</picture>
 					</div>
 				</section>
