--- a/slides/2201nsc/sketches/dynamic-instancing/index.html
+++ b/slides/2201nsc/sketches/dynamic-instancing/index.html
@@ -46,7 +46,7 @@
         const baseColors = [];
 
         const color = new THREE.Color();
-        //const colors = [new THREE.Color(0x00ffff), new THREE.Color(0xffff00), new THREE.Color(0xff00ff)];
+        
         const colors = [
             new THREE.Color(0xffb3ba), // pastel pink
             new THREE.Color(0xbaffc9), // pastel mint green
@@ -190,7 +190,7 @@
                 mesh.getMatrixAt(i, dummy.matrix);
                 dummy.matrix.decompose(dummy.position, dummy.quaternion, dummy.scale);
 
-                dummy.position.y = Math.abs(2.5 * Math.sin((time * 2 + seeds[i]) * seeds[i] * 1.02));
+                dummy.position.y = Math.abs( Math.sin( ( time + seeds[ i ] ) * 2 + seeds[ i ] ) );
 
                 dummy.updateMatrix();
 
