--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -244,21 +244,6 @@
 
 				</section>
 
-				<section data-background-iframe="sketches/vectors/v.html" data-background-interactive
-					data-background-color="rgb(0, 0, 0)" data-background-opacity="0.99" data-auto-animate>
-					<h3 style="
-				  font-size:80%;margin-top:0px;
-				  background-color: rgb(231, 231, 231);
-				  border: 2px solid rgb(0, 0, 0);
-				  padding: 10px;
-				  margin: auto;
-				  color: black;
-				  width: 55%;
-				  ">Vector space representation</h3>
-
-					<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-				</section>
-
 				<section data-background-iframe="sketches/points/" data-background-interactive
 					data-background-color="rgb(0, 0, 0)" data-background-opacity="0.9" data-auto-animate>
 					<h3 style="
@@ -268,11 +253,28 @@
 			     padding: 10px;
 			     margin: auto;
 			     color: black;
-			     width: 55%;
-			     ">Vector space representation</h3>
+			     width: 25%;
+			     ">Vector spaces</h3>
 
 					<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 				</section>
+
+				<section data-background-iframe="sketches/vectors/v.html" data-background-interactive
+					data-background-color="rgb(0, 0, 0)" data-background-opacity="0.99" data-auto-animate>
+					<h3 style="
+				  font-size:80%;margin-top:0px;
+				  background-color: rgb(231, 231, 231);
+				  border: 2px solid rgb(0, 0, 0);
+				  padding: 10px;
+				  margin: auto;
+				  color: black;
+				  width: 25%;
+				  ">Vector spaces</h3>
+
+					<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+				</section>
+
+
 
 
 				<section data-auto-animate>
@@ -292,7 +294,7 @@
 				margin: auto;
 				color: black;
 				width: 50%;
-				">Applications: Computer Graphics</h3>
+				">Applications: Computer graphics</h3>
 
 				</section>
 
@@ -346,7 +348,7 @@
 				<section>
 					<h4>Applications: Affine transformations</h4>
 
-					<p style="font-size: 70%;margin-top: -10px;"  class="fragment" data-fragment-index="0">
+					<p style="font-size: 70%;margin-top: -10px;" class="fragment" data-fragment-index="0">
 						<strong>Fractals</strong>
 					</p>
 
@@ -389,13 +391,13 @@
 						</tr>
 					</table>
 
-					
+
 					<div style="margin-top: -30px;" class="fragment" data-fragment-index="0">
 						<picture>
 							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.webp"
 								type="image/webp">
-							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.gif" alt="🤯" 
-							    width="80" height="80">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.gif" alt="🤯" width="80"
+								height="80">
 						</picture>
 					</div>
 				</section>
@@ -405,22 +407,21 @@
 						Format of the course
 					</h3>
 
-					<div class="left-txt size-85">
-						<ul style="line-height: 60px;">
+					<div class="left-txt size-80">
+						<ul style="line-height: 55px;">
 							<li class="fragment" data-fragment-index="0">Flipped-classroom:
 
 								<ul>
-									<li class="fragment" data-fragment-index="1">Content is available on the Canvas
-										course website.</li>
-									<li class="fragment" data-fragment-index="2">You are expected to study the content
-										before the weekly on-campus workshop.</li>
-								</ul>
-							</li>
-
-							<li class="fragment" data-fragment-index="3">
-								Weekly on-campus workshop:
-								<ul>
-									<li class="fragment" data-fragment-index="4">Practice with workshop problems.
+									<li class="fragment" data-fragment-index="1">
+										📖 Read the relevant course notes for the
+										topic being covered (Canvas).
+									</li>
+									<li class="fragment" data-fragment-index="2">
+										👀 Watch the associated lecture videos.
+									</li>
+									<li class="fragment" data-fragment-index="3">
+										You are expected to study the content
+										before the <strong>weekly on-campus workshop</strong>.
 
 										<div style="text-align: center;">
 											<picture>
@@ -431,16 +432,72 @@
 													alt="✏" width="64" height="64">
 											</picture>
 											<picture style="font-size: 100px;">
-												🗒️ Q&A
+												🗒️
 											</picture>
 										</div>
 									</li>
 								</ul>
 							</li>
+
+
 						</ul>
 					</div>
 
 					<br />
+				</section>
+
+				<section>
+					<h4 style="color: white;">Traditional Lecture</h4>
+					<div>
+						<img style="width:650px"
+							src="https://images.unsplash.com/photo-1561089489-f13d5e730d72?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3wyMDcwNnwwfDF8c2VhcmNofDJ8fG1hdGhlbWF0aWNzJTIwY29sbGFib3JhdGlvbnxlbnwwfHx8fDE3NTE2NzY3OTh8MA&amp;ixlib=rb-4.1.0&amp;q=80&amp;w=1920&amp;utm_source=slides&amp;utm_medium=referral&amp;utm_campaign=api-credit">
+					</div>
+					<br />
+					<br />
+
+				</section>
+
+				<section>
+					<br/>
+					<h4>Active Learning</h4>
+					<div style="position: relative; height: 100vh;">
+						<img style="width:500px;position: absolute; top: 10px; left: 50px;"
+							src="https://images.unsplash.com/photo-1543295523-78c9bbdba65c?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3wyMDcwNnwwfDF8c2VhcmNofDN8fG1hdGhlbWF0aWNzJTIwZ3JvdXAlMjBzdHVkeXxlbnwwfHx8fDE3NTE2NzcxNTd8MA&amp;ixlib=rb-4.1.0&amp;q=80&amp;w=1920&amp;utm_source=slides&amp;utm_medium=referral&amp;utm_campaign=api-credit">
+
+						<img style="width:450px;position: absolute; top: 100px; left: 480px;"
+							src="https://images.unsplash.com/photo-1750776418412-1548a2b3f4b9?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3wyMDcwNnwwfDF8c2VhcmNofDIzfHxtYXRoZW1hdGljcyUyMHN0dWR5fGVufDB8fHx8MTc1MTY3NjczMnww&amp;ixlib=rb-4.1.0&amp;q=80&amp;w=1920&amp;utm_source=slides&amp;utm_medium=referral&amp;utm_campaign=api-credit">
+
+					</div>
+
+				</section>
+
+
+
+
+				<section>
+					<h3>Assessment</h3>
+
+					<div class="size-85 left-txt">
+						<ul style="line-height: 65px;">
+							<li class="fragment" data-fragment-index="0">
+								Quizzes (15%): Weeks 3, 6, 9, 12.
+							</li>
+							<li class="fragment" data-fragment-index="1">
+								Assignment 1 (25%): Week 8.
+							</li>
+							<li class="fragment" data-fragment-index="2">
+								Oral presentation (30%): Week 12.
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								Final exam (30%): Exam period.
+							</li>
+						</ul>
+					</div>
+
+					<br />
+					<br />
+					<br />
+
 				</section>
 
 
