--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -79,7 +79,7 @@
 			</section>
 
 			<section>
-				<section data-background-iframe="sketches/matrix/" data-background-color="white">
+				<section>
 					<h3>Lineal Algebra & Applications</h3>
 
 					<br />
@@ -281,6 +281,7 @@
 					<h4>Applications: Searching engines</h4>
 					<img width="80%" data-src="images/week-01/search-engine.png">
 					<br />
+					<br />
 				</section>
 
 				<section data-auto-animate data-background-iframe="sketches/dynamic-instancing/"
@@ -322,15 +323,16 @@
 
 				<section>
 					<h4>Applications: Singular Value Decomposition (SVD)</h4>
-					<p style="font-size: 70%;margin-top: -10px;">
+					<p style="font-size: 70%;margin-top: -10px;" class="fragment" data-fragment-index="0">
 						<strong>Image Compression</strong>
 					</p>
 
 					<video loop style="width:500px" data-autoplay data-src="images/week-01/compressing-cat.mov"></video>
 
-					<br />
-					<br />
-					<br />
+					<div class="fragment" data-fragment-index="1">
+						<p>👉 Week 10</p>
+					</div>
+
 				</section>
 
 				<!--
@@ -374,6 +376,17 @@
 											\end{pmatrix}
 											$
 										</p>
+										<br />
+										<div style="text-align: center;" class="fragment" data-fragment-index="0">
+											<picture>
+												<source
+													srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.webp"
+													type="image/webp">
+												<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.gif"
+													alt="🤯" width="80" height="80">
+											</picture>
+
+										</div>
 
 									</div>
 								</div>
@@ -392,14 +405,10 @@
 					</table>
 
 
-					<div style="margin-top: -30px;" class="fragment" data-fragment-index="0">
-						<picture>
-							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.webp"
-								type="image/webp">
-							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f92f/512.gif" alt="🤯" width="80"
-								height="80">
-						</picture>
+					<div style="margin-top: -30px;" class="fragment" data-fragment-index="1">
+						<p>👉 Week 11</p>
 					</div>
+					<br>
 				</section>
 
 				<section>
@@ -447,19 +456,18 @@
 				</section>
 
 				<section>
-					<h4 style="color: white;">Traditional Lecture</h4>
+					<h4>Instead of having traditional lectures</h4>
 					<div>
 						<img style="width:650px"
 							src="https://images.unsplash.com/photo-1561089489-f13d5e730d72?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3wyMDcwNnwwfDF8c2VhcmNofDJ8fG1hdGhlbWF0aWNzJTIwY29sbGFib3JhdGlvbnxlbnwwfHx8fDE3NTE2NzY3OTh8MA&amp;ixlib=rb-4.1.0&amp;q=80&amp;w=1920&amp;utm_source=slides&amp;utm_medium=referral&amp;utm_campaign=api-credit">
 					</div>
 					<br />
-					<br />
 
 				</section>
 
 				<section>
-					<br/>
-					<h4>Active Learning</h4>
+					<br />
+					<h4>Active Learning & Collaboration</h4>
 					<div style="position: relative; height: 100vh;">
 						<img style="width:500px;position: absolute; top: 10px; left: 50px;"
 							src="https://images.unsplash.com/photo-1543295523-78c9bbdba65c?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3wyMDcwNnwwfDF8c2VhcmNofDN8fG1hdGhlbWF0aWNzJTIwZ3JvdXAlMjBzdHVkeXxlbnwwfHx8fDE3NTE2NzcxNTd8MA&amp;ixlib=rb-4.1.0&amp;q=80&amp;w=1920&amp;utm_source=slides&amp;utm_medium=referral&amp;utm_campaign=api-credit">
@@ -486,18 +494,39 @@
 								Assignment 1 (25%): Week 8.
 							</li>
 							<li class="fragment" data-fragment-index="2">
-								Oral presentation (30%): Week 12.
+								Assignment 2 (30%): Video presentation in Week 12.
+								<span class="fragment" data-fragment-index="3">Submitted through Canvas.</span>
 							</li>
-							<li class="fragment" data-fragment-index="3">
+							<li class="fragment" data-fragment-index="4">
 								Final exam (30%): Exam period.
 							</li>
 						</ul>
 					</div>
 
-					<br />
+					<div class="size-80">
+						<p class="fragment" data-fragment-index="5">All info also available at Lerning@Griffith
+							<br />(a.k.a. Canvas)
+						</p>
+					</div>
+
 					<br />
 					<br />
 
+				</section>
+
+				<section>
+					<h3>Let's begin!</h3>
+
+					<div>
+						<picture>
+							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.webp"
+								type="image/webp">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.gif" alt="🚀" 
+							    width="220"
+								height="220">
+						</picture>
+					</div>
+					<br/>
 				</section>
 
 
