--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -514,6 +514,59 @@
 
 				</section>
 
+
+				<section>
+					<h3>Questions about the course content</h3>
+
+					<div class="size-85 left-txt">
+						<ul style="line-height: 55px;">
+
+							<li class="fragment" data-fragment-index="0">
+								Get in touch with me!
+							</li>
+
+							<li class="fragment" data-fragment-index="0">
+								Email: <a href="emailto:j.poncecampuzano@griffith.edu.au">j.poncecampuzano@griffith.edu.au</a>
+							</li>
+							<li class="fragment" data-fragment-index="1">
+								Office Location: G24_3.24
+							</li>
+
+						</ul>
+					</div>
+
+					<div>
+						<picture>
+							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.webp"
+								type="image/webp">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.gif" alt="🤔"
+							    width="100"
+								height="100">
+						</picture>
+					</div>
+
+					<div class="size-85 left-txt">
+						<ul style="line-height: 55px;">
+
+							<li class="fragment" data-fragment-index="2">
+								<strong>Main convenor:</strong> Dr Patrick Marchisella
+							</li>
+
+							<li class="fragment" data-fragment-index="2">
+								Email: <a href="emailto:p.marchisella@griffith.edu.au">p.marchisella@griffith.edu.au</a>
+							</li>
+							<li class="fragment" data-fragment-index="2">
+								Office Location: G24_3.24
+							</li>
+
+						</ul>
+					</div>
+
+					<br/>
+					
+				</section>
+
+
 				<section>
 					<h3>Let's begin!</h3>
 
@@ -521,12 +574,11 @@
 						<picture>
 							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.webp"
 								type="image/webp">
-							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.gif" alt="🚀" 
-							    width="220"
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.gif" alt="🚀" width="220"
 								height="220">
 						</picture>
 					</div>
-					<br/>
+					<br />
 				</section>
 
 
