--- a/slides/2201nsc/credits.html
+++ b/slides/2201nsc/credits.html
@@ -11,6 +11,6 @@
 	<br />
 
 	<div>
-		<img width="100px"  src="https://s3.amazonaws.com/media-p.slid.es/uploads/1304482/images/7856932/penrose-triangle.gif">
+		<img width="100px"  src="images/penrose-triangle.gif">
 	</div>
 </div>
