--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -529,7 +529,7 @@
 								Email: <a href="emailto:j.poncecampuzano@griffith.edu.au">j.poncecampuzano@griffith.edu.au</a>
 							</li>
 							<li class="fragment" data-fragment-index="1">
-								Office Location: G24_3.24
+								 🗺️ Office Location: G24_3.24
 							</li>
 
 						</ul>
@@ -556,7 +556,7 @@
 								Email: <a href="emailto:p.marchisella@griffith.edu.au">p.marchisella@griffith.edu.au</a>
 							</li>
 							<li class="fragment" data-fragment-index="2">
-								Office Location: G24_3.24
+								📍 Office Location: N44_3.35, in Nathan
 							</li>
 
 						</ul>
