--- a/slides/2201nsc/week-02.html
+++ b/slides/2201nsc/week-02.html
@@ -60,7 +60,7 @@
 			<section>
 
 				<div style="margin-top: -40px; margin-bottom: 40px;">
-					<img src="images/gu-logo-black-white.gif"
+					<img src="images/Griffith-logo-black.png"
 						style="width: 150px; vertical-align: middle; border: 0px solid rgb(255, 255, 255);">
 				</div>
 
