--- a/slides/1010eng/week-09.html
+++ b/slides/1010eng/week-09.html
@@ -59,7 +59,7 @@
 			<section>
 
 				<div style="margin-top: -40px; margin-bottom: 40px;">
-					<img src="images/gu-logo-black-white.gif"
+					<img src="images/Griffith-logo-black.png"
 						style="width: 200px; vertical-align: middle; border: 0px solid rgb(255, 255, 255);">
 				</div>
 
