--- a/slides/index.html
+++ b/slides/index.html
@@ -111,7 +111,7 @@ https://www.geogebra.org/m/xsy4fy25
         <ul>
             <li><a href="1017scg/">Foundation Mathematics</a></li>
             <li><a href="1010eng/">Engineering Mathematics 1</a></li>
-            <li><a href="2201nsc/">Engineering Mathematics 1</a></li>
+            <li><a href="2201nsc/">Linear Algebra & Applications</a></li>
         </ul>
     </div>
 
