--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -321,6 +321,16 @@
 
 				</section>
 
+				<section data-auto-animate>
+					<h3>ChatGPT</h3>
+					<video loop style="width:800px;" data-autoplay data-src="images/week-01/chat-gpt.mp4"></video>
+					<p style="font-size:18px;margin-top:-5px">More details here: <a
+							href="https://arxiv.org/pdf/2303.08774" target="_blank"> GPT-4 Technical Report</a></p>
+
+					<br />
+
+				</section>
+
 				<section>
 					<h4>Applications: Singular Value Decomposition (SVD)</h4>
 					<p style="font-size: 70%;margin-top: -10px;" class="fragment" data-fragment-index="0">
