--- a/slides/1010eng/week-07.html
+++ b/slides/1010eng/week-07.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Week 7</title>
+	<title>1010ENG - Week 7</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
