--- a/slides/1010eng/week-09.html
+++ b/slides/1010eng/week-09.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Week 9</title>
+	<title>1010ENG - Week 9</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<link rel="stylesheet" href="../revealjs/dist/reveal.css">
