--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Week 2</title>
+	<title>1017SCG - Week 2</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
