--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Week 1</title>
+	<title>2201NSC - Week 1</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
