--- a/slides/2201nsc/index.html
+++ b/slides/2201nsc/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>1017SCG - Table of contents</title>
+	<title>2201NSC - Table of contents</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
