--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -533,7 +533,7 @@
 							<strong>Example:</strong>
 							<span class="fragment" data-fragment-index="5">$\log_2 10$</span>
 							<span class="fragment" data-fragment-index="6">$ =\dfrac{\log_{10} 10}{\log_{10} 2} $</span>
-							<span class="fragment" data-fragment-index="7">$ = \dfrac{1}{0.3010}$</span>
+							<span class="fragment" data-fragment-index="7">$ \approx \dfrac{1}{0.3010}$</span>
 							<span class="fragment" data-fragment-index="8">$\approx 3.32$</span>
 						</p>
 					</div>
@@ -541,14 +541,14 @@
 				</section>
 
 				<section>
-					<h3>Practice Questions 📝</h3>
+					<h3>Practice! 📝</h3>
 
 					<div class="left-txt size-95">
 						<ol style="line-height: 90px;">
 							<li>Evaluate: \( \log_4 64 \)</li>
 							<li>Simplify using laws: \( \log_2 8 + \log_2 4 \)</li>
 							<li>Simplify: \( \log_3 81 - \log_3 3 \)</li>
-							<li>Use change of base: \( \log_7 50 \) (use base 10)</li>
+							<li>Use change of base: \( \log_7 100 \) (use base 10)</li>
 						</ol>
 					</div>
 					<br />
